# libsemigroups_pybind11

./: .clang-format  .codespellrc  .gitignore  .mailmap  .travis.yml  CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  authors.html  biblio.html  bmat.html  changelog-v0.html  changelog-v1.html  changelog.html  congruences.html  dev-environment.yml  digraph.html  elements.html  fpsemigroups.html  genindex.html  index.html  install.html  konieczny.html  libsemigroups-error.html  matrix.html  misc.html  objects.inv  order.html  py-modindex.html  pyproject.toml  release.toml  report.html  requirements.txt  search.html  searchindex.js  semigroups.html  setup.cfg  setup.py  (+3 more)
.github/workflows/: codespell.yml  config-options.yml  custom-branch.yml  doc.yml  lint.yml  pip.yml  pylint.yml  test-conda.yml  test-github.yml  tests-dev.yml  tests.yml  wheels.yml
_sources/: authors.rst.txt  bmat.rst.txt  changelog-v1.rst.txt  changelog.rst.txt  congruences.rst.txt  elements.rst.txt  fpsemigroups.rst.txt  index.rst.txt  install.rst.txt  libsemigroups-error.rst.txt  matrix.rst.txt  semigroups.rst.txt  words.rst.txt
_sources/api/: PPerm.rst.txt  Perm.rst.txt  Transf.rst.txt  bipart.rst.txt  bmat8.rst.txt  cong.rst.txt  digraph.rst.txt  fpsemi.rst.txt  kambites.rst.txt  matrix.rst.txt  number_of_words.rst.txt  pbr.rst.txt  silo.rst.txt  sislo.rst.txt  toddcoxeter.rst.txt  wilo.rst.txt  wislo.rst.txt
_sources/froidure-pin/: idempotents.rst.txt  membership.rst.txt  runner.rst.txt
_sources/konieczny/: generators.rst.txt  idempotents.rst.txt  membership.rst.txt  runner.rst.txt
_sources/presentations/: present-helpers.rst.txt  present.rst.txt
_static/: custom.css  documentation_options.js  links.rst  runner_non_inherit.rst
api/: PPerm.html  Perm.html  Transf.html  bipart.html  bmat8.html  cong.html  digraph-helper.html  digraph.html  forest.html  fpsemi-examples.html  fpsemi.html  kambites.html  knuth-bendix.html  matrix.html  number_of_words.html  pbr.html  silo.html  sislo.html  stephen-helpers.html  stephen.html  toddcoxeter.html  wilo.html  wislo.html
build_tools/: __init__.py  packaging_helpers.py
ci/: install-in-docker-container.sh  launch-docker.sh  run-lint-in-docker-container.sh  run-tests-in-docker-container.sh
data-structures/: to-function.html
data-structures/adapters/: imageleftaction.html  imagerightaction.html  index.html
data-structures/constants/: index.html
data-structures/elements/: index.html
data-structures/enums/: congruence-kind.html  index.html  matrix-kind.html  order.html  paths-algorithm.html  side.html  tril.html
data-structures/hpcombi/: index.html  perm16.html  pperm16.html  ptransf16.html  transf16.html  vect16.html
data-structures/order/: index.html
data-structures/presentations/: examples.html  index.html  inverse-present.html  obvinf.html  present-helpers.html  present.html  to-inverse-present.html  to-present.html
data-structures/suffix-trees/: index.html  ukkonen-helpers.html  ukkonen.html  ukkonen.node.html  ukkonen.state.html
data-structures/tries/: class.html  (+2 more)
docs/: Makefile  environment.yml  requirements.txt
etc/: alphabet_order.py  build-wheels.sh  catch-cpp-to-pytest-f1.vim  catch-cpp-to-pytest.vim  check-docstring-indentation.py  check-params.py  check_params_doc.py  check_sync.py  deploy-doc.sh  doxy-to-sphinx-f2.vim  format_doc.sh  libsemigroups_version.py  mac_os_version.py  make-dev-environment.sh  make-doc-sphinx.sh  make-doc.sh  make-libsemigroups.sh  make-lint.sh  make-requirements.py  make-requirements.sh  replace-strings-in-doc.py  replace-strings-in-doc.sh  set-conda-environment-variables.sh  strip_whitespace_from_doc.py  version.py
examples/: not_renner_B_5_1.py
froidure-pin/: accessors.html  attributes.html  cayley-graphs.html  factorisation.html  generators.html  idempotents.html  index.html  init.html  membership.html  prefix.html  runner.html  settings.html
konieczny/: attributes.html  generators.html  greens.html  idempotents.html  index.html  init.html  membership.html  runner.html
libsemigroups_pybind11/: __init__.py  __inverse_presentation.py  _dot.py  action.py  action_digraph_helper.py  adapters.py  aho_corasick.py  bipartition.py  blocks.py  bmat8.py  congruence.py  forest.py  fpsemigroup.py  froidure_pin.py  gabow.py  is_obviously_infinite.py  kambites.py  knuth_bendix.py  konieczny.py  matrix.py  paths.py  pbr.py  presentation.py  py_wrappers.py  runner.py  schreier_sims.py  sims.py  stephen.py  to.py  todd_coxeter.py  tools.py  transf.py  ukkonen.py  word_graph.py  words.py
presentations/: index.html  present-helpers.html  present.html
requirements-archive/: py10-requirements.txt  py11-requirements.txt  py12-requirements.txt  py13-requirements.txt  py14-requirements.txt
src/: CPPLINT.cfg  action-digraph.cpp  action.cpp  adapters.cpp  aho-corasick.cpp  bipart.cpp  bmat8.cpp  bmat8.hpp  cong-common.cpp  cong-common.hpp  cong-intf-doc.hpp  cong-intf.cpp  cong.cpp  cong.hpp  constants.cpp  doc-strings.hpp  dot.cpp  errors.cpp  errors.hpp  forest.cpp  fpsemi-examples.cpp  fpsemi.cpp  freeband.cpp  froidure-pin-base.cpp  froidure-pin.cpp  gabow.cpp  hpcombi.cpp  kambites.cpp  kbe.cpp  kbe.hpp  knuth-bendix-impl.cpp  knuth-bendix.cpp  konieczny.cpp  libsemigroups  main.cpp  main.hpp  matrix.cpp  obvinf.cpp  order.cpp  paths.cpp  (+26 more)
tests/: cong_common.py  element.py  fpsemi_intf.py  runner.py  test_action.py  test_actiondigraph.py  test_adapters.py  test_aho_corasick.py  test_bipart.py  test_bmat8.py  test_cong.py  test_constants.py  test_delta.py  test_dot.py  test_forest.py  test_fpsemi.py  test_fpsemi_examples.py  test_froidure_pin.py  test_gabow.py  test_hpcombi.py  test_kambites.py  test_knuth_bendix.py  test_konieczny.py  test_matrix.py  test_obvinf.py  test_paths.py  test_pbr.py  test_present.py  test_presentation_examples.py  test_runner.py  test_schreier_sims.py  test_sims.py  test_sims1.py  test_siso.py  test_stephen.py  test_to.py  test_to_presentation.py  test_todd_coxeter.py  test_transf.py  test_ukkonen.py  (+8 more)
ukkonen/: index.html  ukkonen-helpers.html  ukkonen.html
(+578 files in other folders)
