# TODO:
#  * Use ruff
#  * Decide on good configurations for tools
#  * Use pre-commit
#  * Use MyPy
[build-system]
build-backend = "setuptools.build_meta"
# This list should contain anything used in setup.py, or during the build
# process. These should not be aggressively pinned to allow the package to built
# on as many different systems as possible.
requires = [
    "setuptools>=64",
    "setuptools-scm>=8", # used to maintain _version.py
    "pybind11",
    "pkgconfig",
    "packaging",
]

[project]
authors = [
    { name = "Reinis Cirpons", email = "rc234@st-andrews.ac.uk" },
    { name = "Joseph Edwards", email = "jde1@st-andrews.ac.uk" },
    { name = "James Mitchell", email = "jdm3@st-andrews.ac.uk" },
    { name = "Maria Tsalakou", email = "mt200@st-andrews.ac.uk" },
    { name = "Murray Whyte", email = "mw231@st-andrews.ac.uk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: English",
]

# This list should contain any external package installed within this package.
# These should not be aggressively pinned to allow the package to be used on as
# many different systems as possible.
dependencies = ["graphviz", "numpy", "typing_extensions"]

description   = "A python package for the libsemigroups C++ library."
dynamic       = ["version"]
license       = "GPL-3.0-or-later"
license-files = ["LICENSE"]
# TODO: Uncomment and update
# maintainers = [{ name = "My Organization", email = "myemail@email.com" }]
name            = "libsemigroups_pybind11"
readme          = "README.md"
requires-python = ">=3.10"

[project.urls]
Changelog     = "https://libsemigroups.github.io/libsemigroups_pybind11/changelog.html"
Documentation = "https://libsemigroups.github.io/libsemigroups_pybind11/"
Homepage      = "https://github.com/libsemigroups/libsemigroups_pybind11"
Issues        = "https://github.com/libsemigroups/libsemigroups_pybind11/issues"

[project.optional-dependencies]
# This list should contain any package used to build the docs.
# These should not be aggressively pinned to allow the package doc to be built
# on as many different systems as possible.
docs = [
    "bs4",
    "sphinx-rtd-theme",
    "sphinx; python_version <= '3.10'",
    "sphinx >=8.2; python_version > '3.10'",
    "sphinx-copybutton",
    "sphinxcontrib-bibtex",
]

# This list should contain any package used to test the package.
# These should not be aggressively pinned to allow the package to be tested
# on as many different systems as possible.
test = ["pytest"]

[dependency-groups]
# This list should contain any package used in the development of
# libsemigroups_pybind11.
# These *SHOULD* be aggressively pinned to facilitate reproducible development
# environments
dev = [
    "graphviz==0.21",
    "numpy==2.3.4",
    "pkgconfig==1.5.5",
    "pybind11==3.0.1",
    "pylint==4.0.2",
    "ruff==0.14.1",
    "typing-extensions==4.15.0",
    { include-group = "docs" },
    { include-group = "test" },
]
docs = [
    "bs4==4.14.2",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-copybutton==0.5.2",
    "sphinx==8.2.3",
    "sphinxcontrib-bibtex==2.6.5",
]
test = ["pytest==8.4.2"]

[tool.cibuildwheel]
build-frontend  = "build"
build-verbosity = 1
skip            = "cp314t*"
test-command    = "pytest {project}/tests"
test-groups     = ["test"]

[tool.cibuildwheel.linux]
before-all = ["source {project}/etc/make-libsemigroups.sh", "make install"]


[tool.cibuildwheel.linux.environment]
CXX             = "g++"
CXXFLAGS        = "-O2"
LD_LIBRARY_PATH = "$LD_LIBRARY_PATH:/usr/lib:/usr/local/lib"
PKG_CONFIG_PATH = "$PKG_CONFIG_PATH:/usr/lib/pkgconfig:/usr/local/lib/pkgconfig"

[tool.cibuildwheel.macos]
before-all = ["source {project}/etc/make-libsemigroups.sh", "sudo make install"]

[tool.cibuildwheel.macos.environment]
CXX                      = "clang++"
CXXFLAGS                 = "-O2"
MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.codespell]
ignore-multiline-regex = "codespell:begin-ignore.*codespell:end-ignore"
ignore-words-list      = "nd,toword,groupe,theses"
skip                   = "./.git,./docs/_build/*,./gh-pages"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/libsemigroups_pybind11/_version.py"

[tool.black]
line-length = 80

[tool.ruff]
line-length = 100
lint.ignore = ["F401", "E402"]
lint.select = ["E", "F", "B"]

[tool.ruff.lint.per-file-ignores]

"src/libsemigroups_pybind11/presentation/examples.py" = ["E501"]
# Uncomment the following to have more aggressive ruff linting
# lint.extend-select = ["B", "I", "UP"]

# [tool.ruff.format]
# docstring-code-format = true

[tool.pytest.ini_options]
addopts              = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
console_output_style = "progress"
filterwarnings       = ["error"]
log_cli_level        = "INFO"
markers              = ["quick", "standard", "extreme", "fail"]
minversion           = "6.0"
testpaths            = ["tests"]
verbosity_test_cases = 1
xfail_strict         = true

[tool.pylint.main]
ignore-paths = "src/libsemigroups_pybind11/_version.py"
jobs         = 0

[tool.pylint.miscellaneous]
# List of note tags to take in consideration, separated by a comma.
# notes = ["TODO", "FIXME", "REVIEW"]
disable = ["R0801", "fixme"]
notes   = []

[tool.pylint.similarities]
ignore-imports = "yes"

# TODO: Decide if we want to use mypy
# [tool.mypy]
# files = "src"
# python_version = "3.9"
# strict = true
# enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
# warn_unreachable = true

# [[tool.mypy.overrides]]
# module = [ "_libsemigroups_pybind11", ]
# ignore_missing_imports = true
